--- a/manifest.json
+++ b/manifest.json
@@ -2,6 +2,7 @@
     "manifest_version": 2,
     "name": "YT shorts hider",
     "version": "1.0",
+    "description": "removes YT shorts from suggestions",
     "permissions": [
         "activeTab",
         "storage"
